# Basic-File-Explorer-linux

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  convert_icon.cs  convert_icon.py  convert_icon_new.py  resource.rc
release/file_explorer_0.2/: CHANGELOG.md  README.md
src/: main.rs  utils.rs
src/components/: app_icon.rs  create_operations.rs  directory_tree.rs  drive_bar.rs  file_list.rs  file_operations.rs  help.rs  icon_manager.rs  menu_bar.rs  mod.rs  mouse_strategy.rs  preview.rs  thumbnail_view.rs  toolbar.rs
ui/: app.slint
