[package]
name = "file-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "ico"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "shlobj", "fileapi"] }

[build-dependencies]
embed-resource = "3.0"

[[bin]]
name = "file-explorer"
path = "src/main.rs"

[package.metadata.windows]
subsystem = "windows"